<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moranlee.justgo.activity.activity.MainMenu">

        />
    <android.support.design.widget.NavigationView
...
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


            <Button
                android:id="@+id/go_add_diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/food_icon_main"
                android:layout_marginStart="16dp"
                android:layout_alignTop="@+id/diet_management"
                android:layout_alignStart="@+id/main_weight" />

            <Button
                android:id="@+id/go_body_analysis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/go_exercies_recommendation"
                android:layout_below="@+id/go_add_exercise"
                android:layout_marginStart="75dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/profile_icon_main" />

            <Button
                android:id="@+id/main_weight"
...
                android:layout_alignEnd="@+id/diet_management"
                android:layout_marginEnd="15dp"
                android:background="@drawable/exercise_icon_main" />

            <!-- Analysis button in Main Menu -->
            <Button
                android:id="@+id/mainAnalysisBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/go_add_diet"
                android:layout_below="@+id/main_weight"
                android:background="@drawable/analysis_icon_main" />

...
