<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen2"
    tools:context="com.example.android.moranlee.justgo.activity.activity.weight_usage.past_and_new_weight_activity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/weight_weight"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="Weight"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <EditText
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:hint="amount"
                android:textColorHint="@color/white"
                android:background="@drawable/input_text_1_dark"
                android:id="@+id/new_weight_value"
                />

        </LinearLayout>


        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            app:seriesTitle="Foobar"
            android:id="@+id/weight_graph"
            />

        <LinearLayout
            android:id="@+id/submit_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/weight_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="submit" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
